[package]
name = "glsl-wgsl-compiler"
version = "0.1.0"
categories = ["wasm"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "s"

[features]
default = ["wee_alloc"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2.45"
wee_alloc = { version = "0.4.5", optional = true }
naga = { git = "https://github.com/gfx-rs/naga", features = ["glsl-in", "wgsl-out"] }
web-sys = { version = "0.3.48", features = ["console"] }
