[package]
name = "glsl-wgsl-compiler"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
wee_alloc = { version = "0.4.5", optional = true }
naga = { git = "https://github.com/gfx-rs/naga", features = ["glsl-in", "wgsl-out"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console'
]